新建个性化分支

--- a/src/main/resources/com/liuxz/request/18n/fr.properties
+++ b/src/main/resources/com/liuxz/request/18n/fr.properties
@@ -1,5 +1,5 @@
 language=en
-CoffeeMe=Coffee me ~☕
+CoffeeMe=Coffee me ~\u2615
 CurrentDomain=Current Domain
 CurrentEnv=Current Env
 CurrentProject=Current Project
@@ -11,7 +11,7 @@ enable=Enabled
 Env=Env
 EnvProject=Env / Project
 EnvProjectTtt=target url
-EnvTtt=env name,for example local、dev
+EnvTtt=env name,for example local\u3001dev
 Length=Length
 ManageConfig=Manage Config
 OtherConfig=Other Config
@@ -21,6 +21,7 @@ ProjectName=Project Name
 ProjectNameTtt=project name for example card
 RequestName=Method Description
 SaveRequest=Save Request
+ApiWikiRequest=Api Wiki
 StarDocument=Document
 Strategy=Strategy
 StringGeneratorConfig=String generator config
